# playwright-python

./: pyproject.toml
test_flipkart_login/: locators.py  test_flipkart.py
